--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Shop Watts On</title>
+    <title>Aureta</title>
     <style type="text/css">
     body{
     	width: 100%;
